--- a/project/app/templates/hand_detail.html
+++ b/project/app/templates/hand_detail.html
@@ -63,6 +63,9 @@
                      console.log("Maybe I should update {{ next_seat_to_play }}");
                  }
                  {% endif %}
+             } else if ("contract_text" in data) {
+                 /* The auction just settled, so we need to stop showing the auction slides, and instead show the play slides. */
+                 window.location.reload();
              }
          }, false);
 
