--- a/project/app/templates/hand_detail.html
+++ b/project/app/templates/hand_detail.html
@@ -35,54 +35,56 @@
 {% endblock upper-right-column %}
 {% block scripts %}
     <script>
-         {# TODO -- some events could be handled in either listener; how do I choose a listener? #}
+ {# TODO -- some events could be handled in either listener; how do I choose a listener? #}
 
-         {% if user.is_authenticated %}
-         var playerEventSource = new ReconnectingEventSource('/events/player/system:player:{{ user.player.pk }}/');
-         console.log("Listening for player events on /events/player/system:player:{{ user.player.pk }}");
-         playerEventSource.addEventListener('message', function (e) {
-             const data = JSON.parse(e.data);
-             console.log("Player event listener saw " + e.data);
-         }, false);
+ {% if user.is_authenticated %}
+ const playerEventUrl = '/events/player/html/hand/{{ user.player.pk }}/';
+ var playerEventSource = new ReconnectingEventSource(playerEventUrl);
+ console.log(`Listening for player events on ${playerEventUrl}`);
+ playerEventSource.addEventListener('message', function (e) {
+     const data = JSON.parse(e.data);
+     console.log("Player event listener saw " + e.data);
+ }, false);
+ {% endif %}
+
+ const handEventUrl = '/events/table/html/{{ hand.pk }}/';
+ var handEventSource = new ReconnectingEventSource(handEventUrl);
+ console.log(`Listening for hand events on ${handEventUrl}`);
+
+ handEventSource.addEventListener('message', function (e) {
+     console.log("Hand event listener saw " + e.data);
+
+     const data = JSON.parse(e.data);
+     if ("new-play" in data) {
+         const new_play = data["new-play"];
+         if ("trick_html" in new_play) {
+             const trick_html = new_play["trick_html"];
+             const container = document.getElementById("_3x3-container");
+             container.innerHTML = trick_html;
+         }
+         {% if next_seat_to_play %}
+         if ("{{ next_seat_to_play|title }}" in data) {
+             console.log("Maybe I should update {{ next_seat_to_play }}");
+         }
          {% endif %}
+     } else if ("new-call" in data) {
+         console.log("Maybe I should update the auction and bidding-box slides");
 
-         var handEventSource = new ReconnectingEventSource('/events/hand/{{ hand.pk }}/');
-         console.log("Listening for hand events on /events/hand/{{ hand.pk }}");
+     } else if ("contract_text" in data) {
+         /* The auction just settled, so we need to stop showing the auction slides, and instead show the play slides. */
+         window.location.reload();
+     }
+ }, false);
 
-         handEventSource.addEventListener('message', function (e) {
-             console.log("Hand event listener saw " + e.data);
+ htmx.on("htmx:responseError", function(evt) {
+     const errorToast = document.getElementById('errorToast');
+     const toastBootstrap = bootstrap.Toast.getOrCreateInstance(errorToast);
 
-             const data = JSON.parse(e.data);
-             if ("new-play" in data) {
-                 const new_play = data["new-play"];
-                 if ("trick_html" in new_play) {
-                     const trick_html = new_play["trick_html"];
-                     const container = document.getElementById("_3x3-container");
-                     container.innerHTML = trick_html;
-                 }
-                 {% if next_seat_to_play %}
-                 if ("{{ next_seat_to_play|title }}" in data) {
-                     console.log("Maybe I should update {{ next_seat_to_play }}");
-                 }
-                 {% endif %}
-             } else if ("new-call" in data) {
-                 console.log("Maybe I should update the auction and bidding-box slides");
+     const errorText = document.getElementById('errorText');
+     errorText.innerHTML = evt.detail.xhr.responseText;
 
-             } else if ("contract_text" in data) {
-                 /* The auction just settled, so we need to stop showing the auction slides, and instead show the play slides. */
-                 window.location.reload();
-             }
-         }, false);
-
-         htmx.on("htmx:responseError", function(evt) {
-             const errorToast = document.getElementById('errorToast');
-             const toastBootstrap = bootstrap.Toast.getOrCreateInstance(errorToast);
-
-             const errorText = document.getElementById('errorText');
-             errorText.innerHTML = evt.detail.xhr.responseText;
-
-             toastBootstrap.show();
-         });
+     toastBootstrap.show();
+ });
 
     </script>
 {% endblock scripts %}
