--- a/project/app/templates/hand_detail.html
+++ b/project/app/templates/hand_detail.html
@@ -46,13 +46,19 @@
      console.log("Player event listener saw " + e.data);
 
      if ("new-call" in data) {
+         /* TODO -- check to see if we're currently displaying something *other* than the auction slides, and if so, just reload the whole page. */
+
          /* We handle the bidding box here, whereas the auction history is handled in the "table" listener below.  Only
-            because the auction history is identical regardless of who is looking at it, whereas the bidding box varies a
-            little -- it's active when it's our" turn. */
+            because the auction history is identical regardless of who is looking at it, whereas the bidding box varies
+            a little -- it's active when it's our" turn.
+
+            Also -- I haven't thought this through -- perhaps if you're not authenticated, you can watch the auction
+            history, but in that case there'd be no point in seeing a bidding box.  */
          console.log("Maybe I should update the bidding-box slide");
          const new_call = data["new-call"];
          if ("bidding_box_html" in new_call) {
-             console.log(`Imagine I updateded the bidding box with ${bidding_box_html}`);
+             bidding_box_html = new_call["bidding_box_html"];
+             console.log(`Imagine I updated the bidding box with ${bidding_box_html}`);
          } else {
              console.log("Hey! Y U no bidding_box_html??");
          }
@@ -69,6 +75,8 @@
 
      const data = JSON.parse(e.data);
      if ("new-play" in data) {
+         /* TODO -- check to see if we're currently displaying something *other* than the play slides, and if so, just reload the whole page. */
+
          const new_play = data["new-play"];
          if ("trick_html" in new_play) {
              const trick_html = new_play["trick_html"];
@@ -90,7 +98,7 @@
  }, false);
 
  htmx.on("htmx:responseError", function(evt) {
-     const errorToast = document.getElementById('errorToast');
+         const errorToast = document.getElementById('errorToast');
      const toastBootstrap = bootstrap.Toast.getOrCreateInstance(errorToast);
 
      const errorText = document.getElementById('errorText');
