Kind of working, but lots of problems:
* The bidding box is always blue -- the "active" color, but it should be inactive most of the time
* after everyone else has bid, I need to reload the page for the buttons to have an effect
* logs show that I'm spamming the *hand* listener with the bidding box HTML too, which is pointless

--- a/project/app/templates/bidding-box.html
+++ b/project/app/templates/bidding-box.html
@@ -1,6 +1,6 @@
 {% load fastdev %}
 {% load player_extras %}
-<div id="toast-bidding-box">
+<div id="toast-and-bidding-box">
     <div class="toast-container">
         <div id="errorToast"
              class="toast"
