Stop making an SSE connection to an endpoint that no longer exists.

--- a/project/app/templates/chat-partial.html
+++ b/project/app/templates/chat-partial.html
@@ -29,15 +29,9 @@
     <div>
         Chat Log 'twixt {{ user.player|styled_link:user }} and {{ chat_target|styled_link:user }}
         <div id="chat-log"
-             hx-ext="sse"
-             hx-swap="beforeend scroll:bottom"
-             sse-connect="{{ chat_event_source_endpoint }}"
-             sse-swap="message"
              style="border: 1px solid;
                     overflow: auto;
-                    height: 200px">
-            {% for message in chat_messages %}{{ message }}{% endfor %}
-        </div>
+                    height: 200px">No messages, since I haven't yet straightened out all the SSE stuff.</div>
     </div>
 </div>
 {% endpartialdef chat-html-partial %}
