--- a/project/app/templates/bidding-box.html
+++ b/project/app/templates/bidding-box.html
@@ -1,6 +1,6 @@
 {% load fastdev %}
 {% load player_extras %}
-<div id="toast-and-bidding-box">
+<div>
     <div class="toast-container">
         <div id="errorToast"
              class="toast"
