Update htmx just because

--- a/project/app/templates/base.html
+++ b/project/app/templates/base.html
@@ -152,7 +152,7 @@
     <script src="{% static 'app/bootstrap-5.3.3-dist/js/bootstrap.bundle.min.js' %}"></script>
     <script src="{% static 'django_eventstream/eventsource.min.js' %}"></script>
     <script src="{% static 'django_eventstream/reconnecting-eventsource.js' %}"></script>
-    <script src="{% static 'app/htmx.min.js' %}"></script>
+    <script src="{% static 'app/htmx.org@2.0.4.min.js' %}"></script>
     <script src="{% static 'app/sse.js' %}"></script>
     {% block scripts %}
     {% endblock scripts %}
