Rip a buncha stuff out; rename views and functions
Probably breaks half the tests.

--- a/project/app/templates/read-only_hand.html
+++ b/project/app/templates/read-only_hand.html
@@ -4,11 +4,16 @@
     Review of {{ hand }}
 {% endblock title %}
 {% block content %}
-    <div>
+    <div {% if hand.is_abandoned %}style="text-decoration-line: line-through;"{% endif %}>
         <h2>Review of {{ terse_description }}</h2>
         <h2>{{ hand.auction.status }}</h2>
         <h1>{{ score }}</h1>
     </div>
+    {% if hand.is_abandoned %}
+        <div>
+            <h1 style="text-align: center; color: red">This hand was abandoned: {{ hand.abandoned_because }}</h1>
+        </div>
+    {% endif %}
     <div style="display: flex; justify-content: center; overflow: auto; ">{% include "four-hands.html" %}</div>
     <div style="display: flex;">
         <div style="flex-grow: 1">{% include "auction.html" %}</div>
