--- a/project/app/templates/interactive_hand.html
+++ b/project/app/templates/interactive_hand.html
@@ -35,8 +35,6 @@
 {% endblock upper-right-column %}
 {% block scripts %}
     <script>
- {# TODO -- some events could be handled in either listener; how do I choose a listener? #}
-
  {% if user.is_authenticated %}
  const playerEventUrl = '/events/player/html/hand/{{ user.player.pk }}/';
  var playerEventSource = new ReconnectingEventSource(playerEventUrl);
@@ -62,8 +60,9 @@
          /* We just replaced the buttons, onto which HTMX had added some attributes or listeners or something, with
          plain HTML that lacks that mojo.  So we now tell htmx to restore the mojo. */
          htmx.process(container);
-     } else {
-         console.log("Hey! Y U no bidding_box_html??");
+     } else if ("current_hand_html" in data) {
+         current_hand_html = data["current_hand_html"]
+         console.log("Imagine I updated our cards with " + current_hand_html);
      }
  });
  {% endif %}
