--- a/project/app/templates/hand-div.html
+++ b/project/app/templates/hand-div.html
@@ -1,48 +1,50 @@
 {% load fastdev %}
-<div id="toast-one-hand">
-    <div class="toast-container">
-        <div id="errorToast"
-             class="toast"
-             role="alert"
-             aria-live="assertive"
-             aria-atomic="true">
-            <div class="toast-header">
-                <svg class="bd-placeholder-img rounded me-2"
-                     width="20"
-                     height="20"
-                     xmlns="http://www.w3.org/2000/svg"
-                     aria-hidden="true"
-                     preserveAspectRatio="xMidYMid slice"
-                     focusable="false">
-                    <rect width="100%" height="100%" fill="#007aff"></rect>
-                </svg>
-                <strong class="me-auto">Uh oh</strong>
-                <small>You're in trouble now</small>
-                <button type="button"
-                        class="btn-close"
-                        data-bs-dismiss="toast"
-                        aria-label="Close"></button>
+<div id="update-me-with-SSE">
+    <div id="toast-one-hand">
+        <div class="toast-container">
+            <div id="errorToast"
+                 class="toast"
+                 role="alert"
+                 aria-live="assertive"
+                 aria-atomic="true">
+                <div class="toast-header">
+                    <svg class="bd-placeholder-img rounded me-2"
+                         width="20"
+                         height="20"
+                         xmlns="http://www.w3.org/2000/svg"
+                         aria-hidden="true"
+                         preserveAspectRatio="xMidYMid slice"
+                         focusable="false">
+                        <rect width="100%" height="100%" fill="#007aff"></rect>
+                    </svg>
+                    <strong class="me-auto">Uh oh</strong>
+                    <small>You're in trouble now</small>
+                    <button type="button"
+                            class="btn-close"
+                            data-bs-dismiss="toast"
+                            aria-label="Close"></button>
+                </div>
+                <div class="toast-body" id="errorText">OK, so, like, that didn't work.</div>
             </div>
-            <div class="toast-body" id="errorText">OK, so, like, that didn't work.</div>
+        </div>
+        <div class="{{ class }}" id="{{ id }}">
+            <div class="spades">
+                {% for c in cards.Spades %}<div>{{ c }}</div>{% endfor %}
+            </div>
+            <div class="hearts">
+                {% for c in cards.Hearts %}<div>{{ c }}</div>{% endfor %}
+            </div>
+            <div class="diamonds">
+                {% for c in cards.Diamonds %}<div>{{ c }}</div>{% endfor %}
+            </div>
+            <div class="clubs">
+                {% for c in cards.Clubs %}<div>{{ c }}</div>{% endfor %}
+            </div>
         </div>
     </div>
-    <div class="{{ class }}" id="{{ id }}">
-        <div class="spades">
-            {% for c in cards.Spades %}<div>{{ c }}</div>{% endfor %}
-        </div>
-        <div class="hearts">
-            {% for c in cards.Hearts %}<div>{{ c }}</div>{% endfor %}
-        </div>
-        <div class="diamonds">
-            {% for c in cards.Diamonds %}<div>{{ c }}</div>{% endfor %}
-        </div>
-        <div class="clubs">
-            {% for c in cards.Clubs %}<div>{{ c }}</div>{% endfor %}
-        </div>
-    </div>
+    <style>
+     div#{{ next_seat_to_play }}.hand {
+         background-color: lightgreen;
+     }
+    </style>
 </div>
-<style>
- div#{{ next_seat_to_play }}.hand {
-     background-color: lightgreen;
- }
-</style>
