Auction history looks OK at first glance

--- a/project/app/templates/auction.html
+++ b/project/app/templates/auction.html
@@ -8,7 +8,7 @@
     <caption>Auction</caption>
     <thead>
         <tr>
-            {% for direction, player in history %}
+            {% for direction, player in players_starting_with_west %}
                 <th {{ player.style|safe }}>
                     <i>{{ direction }}</i>
                     <br>
