--- a/project/app/templates/carousel_style_play.html
+++ b/project/app/templates/carousel_style_play.html
@@ -4,7 +4,7 @@
     <li class="carousel">
         {% ifexists card_display.current_player %}
         <h2>Your Hand ({{ viewers_seat }})</h2>
-        {% include "hand-div.html" with cards=card_display.current_player.cards id=viewers_seat.name class="hand bigfont" %}
+        {% include "hand-div.html" with cards=card_display.current_player.cards id=viewers_seat.name %}
     {% else %}
         No <tt>card_display.current_player</tt> for you
     {% endifexists %}
@@ -12,7 +12,7 @@
 {% ifexists card_display.dummy_hand %}
 <li class="carousel">
     <h2>Dummy ({{ dummy_player }})</h2>
-    {% include "hand-div.html" with cards=card_display.dummy_hand.cards id=dummy_player.seat.name class="hand bigfont" %}
+    {% include "hand-div.html" with cards=card_display.dummy_hand.cards id=dummy_player.seat.name %}
 </li>
 {% endifexists %}
 <li class="carousel">
