--- a/project/app/templates/3x3-trick-display.html
+++ b/project/app/templates/3x3-trick-display.html
@@ -1,10 +1,6 @@
 {% load fastdev %}
-<div class="three-by-three-trick-display"
-     style="display: grid;
-            grid-template-columns: auto auto auto">
+<div class="three-by-three-trick-display">
     {% for row in three_by_three_trick_display.rows %}
-        {% for column in row %}
-            <div {% if column != " " %}style="border: 1px dotted; text-align: center;"{% endif %}>{{ column|safe }}</div>
-        {% endfor %}
+        {% for column in row %}<div>{{ column|safe }}</div>{% endfor %}
     {% endfor %}
 </div>
