--- a/project/app/templates/read-only_hand.html
+++ b/project/app/templates/read-only_hand.html
@@ -14,7 +14,7 @@
             <h1 style="text-align: center; color: red">This hand was abandoned: {{ hand.abandoned_because }}</h1>
         </div>
     {% endif %}
-    <div style="display: flex; justify-content: center; overflow: auto; ">{% include "four-hands.html" %}</div>
+    <div style="display: flex; overflow: auto;">{% include "four-hands.html" %}</div>
     <div style="display: flex;">
         <div style="flex-grow: 1">{% include "auction.html" %}</div>
     </div>
